// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturedPublishers should adjust the layout of the cards if the width is larger than xs or sm 1`] = `
<WithStyles(FeaturedWidget)
  className="wye-FeaturedPublishers root"
  subTitle="The most played titles by the most prolific publishers"
  title="Publishers"
>
  <WithStyles(ForwardRef(Grid))
    className="wye-FeaturedPublishers__itemsContainer itemsContainer"
    container={true}
    justify="center"
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="1"
      xs={3}
    >
      <WithWidth(WithStyles(BrowseCard))
        cardActionHref="/browse/publishers/[name]"
        cardActionLabel="1"
        cardActionLinkPath="/browse/publishers/1"
        data={
          Object {
            "appid": "1",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="2"
      xs={3}
    >
      <WithWidth(WithStyles(BrowseCard))
        cardActionHref="/browse/publishers/[name]"
        cardActionLabel="2"
        cardActionLinkPath="/browse/publishers/2"
        data={
          Object {
            "appid": "2",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="3"
      xs={3}
    >
      <WithWidth(WithStyles(BrowseCard))
        cardActionHref="/browse/publishers/[name]"
        cardActionLabel="3"
        cardActionLinkPath="/browse/publishers/3"
        data={
          Object {
            "appid": "3",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="4"
      xs={3}
    >
      <WithWidth(WithStyles(BrowseCard))
        cardActionHref="/browse/publishers/[name]"
        cardActionLabel="4"
        cardActionLinkPath="/browse/publishers/4"
        data={
          Object {
            "appid": "4",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(PaginationWidget)
    className="wye-FeaturedPublishers__paginationWidget paginationWidget"
    currentPage={1}
    setCurrentPage={[Function]}
    totalPages={1}
  />
  <Styled(MuiBox)
    className="wye-FeaturedPublishers__quickLinkContainer quickLinkContainer"
    my={4}
  >
    <WithStyles(QuickLink)
      label="All Publishers"
      linkHref="/browse/publishers"
    />
  </Styled(MuiBox)>
</WithStyles(FeaturedWidget)>
`;

exports[`FeaturedPublishers should render successfully 1`] = `
<WithStyles(FeaturedWidget)
  className="wye-FeaturedPublishers root"
  subTitle="The most played titles by the most prolific publishers"
  title="Publishers"
>
  <WithStyles(ForwardRef(Grid))
    className="wye-FeaturedPublishers__itemsContainer itemsContainer"
    container={true}
    justify="center"
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="1"
      xs={6}
    >
      <WithWidth(WithStyles(BrowseCard))
        cardActionHref="/browse/publishers/[name]"
        cardActionLabel="1"
        cardActionLinkPath="/browse/publishers/1"
        data={
          Object {
            "appid": "1",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="2"
      xs={6}
    >
      <WithWidth(WithStyles(BrowseCard))
        cardActionHref="/browse/publishers/[name]"
        cardActionLabel="2"
        cardActionLinkPath="/browse/publishers/2"
        data={
          Object {
            "appid": "2",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="3"
      xs={6}
    >
      <WithWidth(WithStyles(BrowseCard))
        cardActionHref="/browse/publishers/[name]"
        cardActionLabel="3"
        cardActionLinkPath="/browse/publishers/3"
        data={
          Object {
            "appid": "3",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="4"
      xs={6}
    >
      <WithWidth(WithStyles(BrowseCard))
        cardActionHref="/browse/publishers/[name]"
        cardActionLabel="4"
        cardActionLinkPath="/browse/publishers/4"
        data={
          Object {
            "appid": "4",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(PaginationWidget)
    className="wye-FeaturedPublishers__paginationWidget paginationWidget"
    currentPage={1}
    setCurrentPage={[Function]}
    totalPages={1}
  />
  <Styled(MuiBox)
    className="wye-FeaturedPublishers__quickLinkContainer quickLinkContainer"
    my={4}
  >
    <WithStyles(QuickLink)
      label="All Publishers"
      linkHref="/browse/publishers"
    />
  </Styled(MuiBox)>
</WithStyles(FeaturedWidget)>
`;
